# mcp-server-ableton

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  pyproject.toml  smithery.yaml
.githooks/: pre-commit  pre-push
.github/workflows/: check.yml  release.yaml
docs/: copilot.md
docs/plans/: 2026-03-12-ableton-mcp-server.md
docs/specs/: 2026-03-12-ableton-mcp-server-design.md
src/: config.rs  errors.rs  installer.rs  lib.rs  main.rs  osc.rs  server.rs  tools.rs
src/tools/: batch.rs  clips.rs  common.rs  devices.rs  scenes.rs  session.rs  tracks.rs  transport.rs
