[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mcp-server-ableton"
dynamic = ["version"]
description = "MCP server for Ableton Live"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.8"
keywords = ["mcp", "ableton", "music", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Rust",
]

[project.urls]
Repository = "https://github.com/vaporif/mcp-server-ableton"

[tool.maturin]
bindings = "bin"
